--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </div>
   <div id="contents">
     <h2>実験１</h2>
-    <p>プログラム改変ではコードの__________の部分を担当した。</p>
-    <p>また、〇に与えた固有値は_____とした。理由は次の通りである。</p>
-    <p>（ここに実測の結果や理論的な推測などを書く）</p> 
+    <p>プログラム改変ではコードのmain()とgoal()の部分を担当した。</p>
+    <p>また、〇に与えた固有値は5とした。理由は次の通りである。</p>
+    <p>△と□は、変数の最大値が5である。このことから、○の固定値を5にすることによって、△と□の変数がどれだけ大きくても、勝利することは可能であるため。</p> 
     <h2>実験２</h2>
     <p>このレポートはGithubの公開ページで作成されたものである。</p>
   </div>
